--- a/iclr-paper-new.tex
+++ b/iclr-paper-new.tex
@@ -20,6 +20,7 @@
 \newcommand{\Eqref}[1]{Eq.~\ref{#1}} % The '~' stops breaking and gives correct spacing
 \newcommand{\Eqrefs}[2]{Eqs.~\ref{#1},~\ref{#2}}
 \def\beqa#1\eeqa{\begin{eqnarray}#1\end{eqnarray}}
+\newcommand{\FIXME}[1]{\textcolor{red}{[#1]}}
 
 \newcommand{\comm}[1]{}
 \newcommand{\given}{\,|\,}
@@ -251,6 +252,7 @@ with learned bias $b$.
 
 The output of the decoder $\hdec_t$ is then passed through the $\writeop$ operator 
 which is added to a cumulative canvas matrix $c_t$, with $c_0=0$ (\Eqref{eq:writeop}). 
+\FIXME{Jimmy, could you put more about the write operator}. 
 The $\writeop$ operator
 applies an array of Gaussian filters on the patch, placing 
 it on the canvas $c_t$ with smoothly varying location and zoom (same as 
@@ -265,8 +267,14 @@ $\oimage$ given the latent variables $\Lat_{1:T}$ and the input caption $\icapti
 \subsection{Learning}
 
 %The model is learned by the modified version of Stochastic Gradient Variation Bayes (SGVB) algorithm introduced by \cite{kingma_vae}. 
-The model is trained to maximize a variational lower bound $\loss$ on the marginal likelihood of the correct image $\oimage$ given the input caption $\icaption$, where $\loss = \sum_{\Lat}Q(\Lat\given\oimage,\icaption)\left(\log P(\oimage\given\icaption, \Lat_{1:T}) - \kldiv\left(Q(\Lat\given\oimage,\icaption)\klBars P(\Lat)\right)\right) \le \log P(\oimage\given\icaption)$. %The posterior inference over the latent variables $\Lat_{1:T}$ is approximated using the inference RNN. 
-Similarly to the DRAW network, the inference RNN produces an approximate posterior $Q(\Lat_{1:T}\given\oimage,\icaption)$ via a $\readop$ operator, which reads a patch from image using an array of Gaussian filters (inverse of $\writeop$), over the training image at each step. 
+The model is trained to maximize a variational lower bound $\loss$ 
+on the marginal likelihood of the correct image $\oimage$ given the input caption $\icaption$:
+\beqa
+\loss = \sum_{\Lat}Q(\Lat\given\oimage,\icaption)\left(\log P(\oimage\given\icaption, \Lat_{1:T}) - \kldiv\left(Q(\Lat\given\oimage,\icaption)\klBars 
+  P(\Lat)\right)\right) \le \log P(\oimage\given\icaption).
+\eeqa
+%The posterior inference over the latent variables $\Lat_{1:T}$ is approximated using the inference RNN. 
+Similar to the DRAW network, the inference RNN produces an approximate posterior $Q(\Lat_{1:T}\given\oimage,\icaption)$ via a $\readop$ operator, which reads a patch from image using an array of Gaussian filters (inverse of $\writeop$), over the training image at each step. 
 \begin{align}
 \label{eq:x_hat}
 \hat{\oimage}_t &= \oimage-\sigmoid(\canv_{t-1}),\\
