--- a/iclr-paper-new.tex
+++ b/iclr-paper-new.tex
@@ -265,8 +265,7 @@ is defined by the LSTM network with \textit{forget} gates
 \citep{gers_forget} at a single time-step. To generate the next 
 hidden state $\hdec_t$, 
 the $\decoder$ takes the previous hidden state $\hdec_{t-1}$ and
-the concatenation of the latent sample $z_t$ with sentence representation $s_t$ 
-as the input to the LSTM network.
+combines it with the input from both the latent sample $z_t$ and the sentence representation $s_t$.
 %combines it with the input from both the latent sample $z_t$ and 
 %sentence representation $s_t$, where
 %$[v_1, v_2]$ denotes the concatenation of $v_1$ and $v_2$ into the single vector.
